--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>OURWAY</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/icon_f3053c7648e5ac0cb8a86248746326a5.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1></h1>
-      <p><span class="typed" data-typed-items="It is more than a game! , There is always more to claim! ,This is OURWAY!,"></span></p>
+      <p><span class="typed" data-typed-items="It is more than a game! , There is always more to claim! ,This is OUR WAY!,"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -210,7 +210,7 @@
                   <div class="col-lg-6" data-aos="fade-up">
         
                     <div class="progress">
-                      <span class="skill">Elo<i class="val">Diamante</i></span>
+                      <span class="skill">Elo<i class="val">Ascendente</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar-nak" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
@@ -258,7 +258,7 @@
               </div>
               
             <p>
-              Comecei a ter a minha primeira experiência com jogos on-line na pandemia, sendo nessa que foi comprado meu PC para fazer aula e jogar principalmente VALORANT, o jogo que me apaixonei e tive diversas divergencias familiares por causa disso, conheci o Viy no meu primeiro time ''Fierce'', onde tive as primeiras impressões de como é fazer parte de um time e buscar a melhora contínua, quando o Viy me convidou para participar do meu primeiro time serio eu fiquei animado, o time por motivos de força maior se desfez e agora tenho a chance de buscar o meu sonho com a filosofia OURWAY.
+              Obtive a minha primeira experiência com jogos on-line na pandemia, sendo nessa que foi comprado meu PC para estudar e nas horas vagas jogar principalmente VALORANT, o jogo pelo qual me apaixonei e tive diversas divergências familiares por causa disso, conheci o "Viy" no meu primeiro time ''Fierce'', onde tive as primeiras impressões de como é fazer parte de um time e buscar a melhora contínua, quando o Viy me convidou eu fiquei extremamente animado, o time por motivos de força maior se desfez e agora tenho a chance de buscar o meu sonho com a OURWAY.
             </p>
 
             <section id="skills" class="skills section-bg">
